# ChangeLog for www-apps/guacamole
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/guacamole/ChangeLog,v 1.2 2012/12/05 20:48:01 nativemad Exp $

*guacamole-0.7.0 (06 Dec 2012)

  06 Dec 2012; Andreas Schuerch <nativemad@gentoo.org> +guacamole-0.7.0.ebuild:
  version bump

*guacamole-0.6.2 (10 Nov 2012)

  10 Nov 2012; Andreas Schuerch <nativemad@gentoo.org> +guacamole-0.6.2.ebuild,
  +metadata.xml:
  New Ebuild for guacamole. Written by me.
