@@ -4,13 +4,13 @@ Hash: SHA256
 DIST guacamole-0.6.2.tar.gz 97138 SHA256 e0cf64202f6d2ac4e82ceed52536c1da2bb50f9fa1cfc8143bc88ca20029a204 SHA512 b37ff09d8bd376338a5ec8230390c345f396702ee48578f485cb02493f1401288a4f80a96accf38d8cc684420c7b1d610850a4d7547a085b489537e46e70be2f WHIRLPOOL ecfa13096d44998c6c4594af937a95f90c93a19626b91c971b3f0c130c275dd72c76b9b4ce460954413cc9aecdcb3856f03974d80acb176f3e2329bb5e91f23c
 DIST guacamole-0.7.0.tar.gz 99852 SHA256 01ee413933ae7e2117658f398cfe9fff0becea221b39d4f4759985c0dc4b3e08 SHA512 e28a192f076f92d6e42f8bad045cea2655adaab563a826cb5c9aa4bfa217c96fa59bc9f6fb92898d5e001fb27fbef3fcf78f25f7be6c2e5a187a69d2eda0c38a WHIRLPOOL 2f8b6b0b3ecb9dab6b4604549bb85303b7a64cfab4cdad962cc6f27a663dc7df1b0e58f5a7a58496aecaf88fa3cebb203243b630de982bcea214dc5da342759e
 EBUILD guacamole-0.6.2.ebuild 1661 SHA256 a3145cba40d0c65f0b1a490fceb6cb9c0d53c755376a03fecbd097296c999da1 SHA512 d79cf10d55947cfc95fbd676efaaa0efc973fed90ba50a535d864384287f16ec64292983ae451a8dccc3a1db5a2991062b1b00f74b16c3d78e14475e4f1a570f WHIRLPOOL 4e19e329e989a8226a740c95fc6ab6c51b1f805a0e38f1b3e8e5417b2e2413b5fc86c8a44d2214d08cb6669a11eca73b28471bec44de9c57421a531ceb81b65d
-EBUILD guacamole-0.7.0.ebuild 1695 SHA256 367c506fdd01b303b5939f22f06dbaa0464c8f6043f79dc2b2693484cb3c9999 SHA512 b7b7a583ea46704179534a3b90345641ed4d1400b3f9284abc7a2439d775670a20e4f0d2a36b8b40e0d39cdb195ca731e45ce0ddea99f89d59f99b60f02fac78 WHIRLPOOL 7af29b2a3348bf8e084c59dc23c6fbbcc8c6395a2b10f15630ba4fbb11d5b9afb0c27ef14430424a96692a9f6c30b80ab9888342de1ee377f0edbc76cbfd4cd7
-MISC ChangeLog 513 SHA256 56c171e7cbc4e385bc487aadb53df6057e4a01aaa59070bb43082066ac3bf248 SHA512 7f100c74aa93cb91f2be0db7aa17cf02e06c8226393d0bd8e4205bd24196ced6f0dfbb81321b5cbb31831dc762cd2fef82e8d44eebd284571ac88106629caff1 WHIRLPOOL 8709e6069978e906a732cfeca7dd0b418b9888242158b6b1dd961a0ae5072025e7cc7ebc5a1a726395669aedbdbab3add1633c5e8ff0fb6c329bdd00d7b75e21
+EBUILD guacamole-0.7.0.ebuild 1838 SHA256 512f258c448d18a3720709b6b1751f986f20ea006cc6a6cdd632c9f417d271bc SHA512 bff2676d5f788b04994ff46730bef6219afae753a10db032033d3f345e57e2a3c7e3fbc97f8495a72b5e99f0f4628bbf81a48dcf5b56300f7b83af86ba73d597 WHIRLPOOL b538a7c5c6f6e6a5be63e54ff1d8cbe6c7f6a937cececae387f221cd97ea9bc6da43fa1c20666311bb091ff4a4c81878ee50983ddead26557b0e0f85706d77e2
+MISC ChangeLog 649 SHA256 016e682cf12dec3a78751ba245d5385349976a00e2058ea6d03cd0a3c2f2a06e SHA512 9c4c469ee24be6d27e4acb8cb0ed35adb8f5abe95e49113889e9bf3badc0046885f4fd81e17af5e49ec83e90c5a0b7273f5dde1f711d25cb86cf386a52496902 WHIRLPOOL 772524755811e90fe012fa6b44168b32f444ebed70a78470014a2edb0a8937600eaa1f75e3770226c264309f7e9aa395c1c983cea9c2938d3e4216caa45f617e
 MISC metadata.xml 641 SHA256 8da01a09b9826c5d47a704916466f320c7da31f5356db20874ebd7fc737bd51f SHA512 caef7a3e86f7e1cd1338e4abab0ee96c06690ab831f66260007a3ae732449fd4c87e98b97009b6a7f7be5f80746828b8bd0f49dde5c5a89717caedc6435b3773 WHIRLPOOL 45ddf48b13040a4f0fb36d7cd39fc030b0e087bb353b09d6d8c83ee8bb627cac82ee5d23181373675395394d8c4a3435855b4001d8a686557df701819a7f34bd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDAIcsACgkQakKUmsHeVLLLUACeM88gi0fzf5AvDKUOY/yyEU2F
-MGEAnArZ06V1/2pTyqjOVxy8doxpz9uO
-=yL0T
+iEYEAREIAAYFAlDAJ6sACgkQakKUmsHeVLINuACcCcSZ0oRqdSUr9W/ZDEcXdjwy
+a1cAnRkpC7BZUm1iLwlH4DtRsQRPfVj8
+=uZP4
 -----END PGP SIGNATURE-----
