@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/guacamole
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/guacamole/ChangeLog,v 1.2 2012/12/05 20:48:01 nativemad Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/guacamole/ChangeLog,v 1.3 2012/12/05 21:13:04 nativemad Exp $
+
+  06 Dec 2012; Andreas Schuerch <nativemad@gentoo.org> guacamole-0.7.0.ebuild:
+  removed some nasty stuff and added some elog about it
 
 *guacamole-0.7.0 (06 Dec 2012)
 
